--- a/empleados/src/main/resources/application.properties
+++ b/empleados/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=empleados
+
+# Configuración de la base de datos (ejemplo con H2)
+spring.datasource.url=jdbc:mysql://localhost:3306/integradora
+spring.datasource.username=root
+spring.datasource.password=secret
+
+# Configuración de JPA/Hibernate
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+
+# Configuración del servidor
+server.port=8081
