add: implementación y página de arranque para el registro de usuario
Creadas clases de Repository, Controller y RestController, Service y su
implementación, DTO del registro de usuario, Configuraciones de
seguridad y encriptación.

--- a/empleados/src/main/resources/application.properties
+++ b/empleados/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=empleados
 # Configuración de la base de datos (ejemplo con H2)
 spring.datasource.url=jdbc:mysql://localhost:3306/integradora
 spring.datasource.username=root
-spring.datasource.password=secret
+spring.datasource.password=admin
 
 # Configuración de JPA/Hibernate
 spring.jpa.show-sql=true
