--- a/empleados/src/main/resources/application.properties
+++ b/empleados/src/main/resources/application.properties
@@ -8,8 +8,9 @@ spring.datasource.password=admin
 
 # Configuración de JPA/Hibernate
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # Configuración del servidor
 server.port=8081
