--- a/comun/build.gradle
+++ b/comun/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'org.slf4j:slf4j-api:2.0.7'
+    implementation 'org.fusesource.jansi:jansi:2.4.0'
 }
 
 tasks.named('test') {
