--- a/administracion/src/main/resources/application.properties
+++ b/administracion/src/main/resources/application.properties
@@ -1,16 +1,18 @@
 spring.application.name=administracion
 
-
-
 # Configuración de la base de datos (ejemplo con H2)
-spring.datasource.url=jdbc:mysql://localhost:3306/integradora
+spring.datasource.url=jdbc:mysql://localhost:3306/integradora?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=secret
+spring.datasource.password=admin
 
 # Configuración de JPA/Hibernate
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # Configuración del servidor
 server.port=8080
+
+# Formato de fecha en Validaciones
+spring.mvc.format.date-time=iso
