add: Subida de archivos al servidor #26
Agregada la subida de archivos al servidor desde el ultimo paso del
registro de empleados

--- a/empleados/src/main/resources/application.properties
+++ b/empleados/src/main/resources/application.properties
@@ -18,4 +18,11 @@ server.port=8081
 # Formato de Fecha en Validaciones
 spring.mvc.format.date-time=iso
 
+# Directorio para guardar los archivos subidos
+file.upload-dir=./uploads/empleados
+
+# Opcional: Limitar tamaño de archivos
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=1MB
+
 
