--- a/empleados/src/main/resources/application.properties
+++ b/empleados/src/main/resources/application.properties
@@ -21,8 +21,18 @@ spring.mvc.format.date-time=iso
 # Directorio para guardar los archivos subidos
 file.upload-dir=./uploads/empleados
 
-# Opcional: Limitar tamaño de archivos
+# Limitar tamaño de archivos
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=1MB
+
+# Propiedades del servidor mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=recuperacontrasena.grupoh@gmail.com
+spring.mail.password=jufb pfnt cdwn qzjt
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.protocol=smtp
+logging.level.org.springframework.mail=DEBUG
 
 
