Add: Nueva estructura de acceso a datos y rama
+ Nuevo Diseño De estructura y acceso de datos para que los repositorios
  de las entidades estén en el módulo comun.
+ Se ha incluido dependencia (ModelMapper)
+ @CompoentScan y @EnableJpaRepositories añadidos al
  EmpleadosApplication.java para que la plantillas de thymeleaf
  se ejecuten correctamente en el Cliente

--- a/empleados/src/main/resources/application.properties
+++ b/empleados/src/main/resources/application.properties
@@ -35,4 +35,16 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.protocol=smtp
 logging.level.org.springframework.mail=DEBUG
 
+# Configuración de Thymeleaf
+# Configuración más específica
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.enabled=true
+spring.thymeleaf.check-template-location=true
+
+## Asegúrate de que SpringMVC está configurado correctamente
+#spring.mvc.view.prefix=
+#spring.mvc.view.suffix=
+
 
