--- a/comun/build.gradle
+++ b/comun/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.4.4'
     id 'io.spring.dependency-management' version '1.1.7'
+    id 'java-library'
 }
 
 group = 'org.grupo_h'
@@ -38,6 +39,7 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.slf4j:slf4j-api:2.0.7'
     implementation 'org.fusesource.jansi:jansi:2.4.0'
+    implementation 'org.modelmapper:modelmapper:3.2.0'
 }
 
 tasks.named('test') {
