add: [REFACTOR] Integración de rama de pruebas a development
* add: Ajuste de campos y adición entidades nuevas

+ Sólo esta hecha la estructura de BB.DD. Faltan repositorios y Servicios

+ Campos añadidos y retocados en Entidades prexistentes conforme a los
   nuevos enunciados recibidos en issue (#26)

+ Nuevas Entidades y campos añadidos en relación a los Datos Económicos

+ Model Mapper añadido a la espera de confirmación por los otros
  integrantes del equipo


* add: Nueva estructura de acceso a datos y rama

+ Nuevo Diseño De estructura y acceso de datos para que los repositorios
  de las entidades estén en el módulo comun.
+ Se ha incluido dependencia (ModelMapper)
+ @ComponentScan y @EnableJpaRepositories añadidos al
  EmpleadosApplication.java para que las plantillas de thymeleaf
  se ejecuten correctamente en el Cliente


* tweak: refactorizado y deduplicado de código

- Movido repositorios al módulo de comun
- Habilitado escaneo de componentes y repositorios desde ambas
  aplicaciones
- Integración de ModelMapper en favor de DTO manual

(#8 principalmente, arreglos generales)

--- a/empleados/src/main/resources/application.properties
+++ b/empleados/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=admin
 
 # Configuración de JPA/Hibernate
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
@@ -34,5 +34,17 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.protocol=smtp
 logging.level.org.springframework.mail=DEBUG
+
+# Configuración de Thymeleaf
+# Configuración más específica
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.enabled=true
+spring.thymeleaf.check-template-location=true
+
+## Asegúrate de que SpringMVC está configurado correctamente
+#spring.mvc.view.prefix=
+#spring.mvc.view.suffix=
 
 
