add: Mejoras a autenticacion y registro por pasos
- Creacion de tabla para parametros
- Eliminacion del campo nombreUsuario para Usuario
- Añadida una lista de usuarios para los usuarios guardados en el
  cliente HTTP
- Añadida una ventana de confirmacion para cada modificacion de la base
  de datos
(#17 , #24)

--- a/empleados/src/main/resources/application.properties
+++ b/empleados/src/main/resources/application.properties
@@ -33,6 +33,6 @@ spring.mail.password=jufb pfnt cdwn qzjt
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.protocol=smtp
-logging.level.org.springframework.mail=DEBUG
+#logging.level.org.springframework.mail=DEBUG
 
 
