add: Mejoras a autenticacion y registro por pasos
- Creacion de tabla para parametros
- Eliminacion del campo nombreUsuario para Usuario
- Añadida una lista de usuarios para los usuarios guardados en el
  cliente HTTP
- Añadida una ventana de confirmacion para cada modificacion de la base
  de datos
(#17 , #24)

--- a/empleados/src/main/resources/application.properties
+++ b/empleados/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=admin
 
 # Configuración de JPA/Hibernate
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
@@ -46,5 +46,6 @@ spring.thymeleaf.check-template-location=true
 ## Asegúrate de que SpringMVC está configurado correctamente
 #spring.mvc.view.prefix=
 #spring.mvc.view.suffix=
+#logging.level.org.springframework.mail=DEBUG
 
 
