add: refactor e implementación de validaciones generales

--- a/empleados/src/main/resources/application.properties
+++ b/empleados/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
+spring.jpa.open-in-view=true
 # Configuración del servidor
 server.port=8081
 
@@ -19,7 +19,7 @@ server.port=8081
 spring.mvc.format.date-time=iso
 
 # Directorio para guardar los archivos subidos
-file.upload-dir=./uploads/empleados
+# file.upload-dir=./uploads/empleados
 
 # Limitar tamaño de archivos
 spring.servlet.multipart.max-file-size=1MB
