--- a/empleados/build.gradle
+++ b/empleados/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 	implementation 'org.springframework:spring-context-support:7.0.0-M4'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation 'org.modelmapper:modelmapper:3.2.0'
 	testImplementation 'org.springframework.security:spring-security-test'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
