--- a/empleados/src/main/resources/application.properties
+++ b/empleados/src/main/resources/application.properties
@@ -55,4 +55,6 @@ server.servlet.session.cookie.name=EMPLOYEE_SESSION
 
 server.servlet.session.timeout=10m
 
+server.servlet.session.timeout=10m
+
 
