add: Reseteo y validaciones de contraseña
- Endpoints para reseteo de contraseña
- Confirmacion de contraseña en DTOs
- Validaciones de contraseña en registro de usuario y cambio de
  contraseña

(#17, #20, #11)

--- a/empleados/src/main/resources/application.properties
+++ b/empleados/src/main/resources/application.properties
@@ -48,4 +48,6 @@ spring.thymeleaf.check-template-location=true
 #spring.mvc.view.suffix=
 #logging.level.org.springframework.mail=DEBUG
 
+server.servlet.session.timeout=10m
+
 
