--- a/empleados/src/main/resources/application.properties
+++ b/empleados/src/main/resources/application.properties
@@ -53,4 +53,6 @@ server.servlet.session.timeout=10m
 # Para EmpleadosApplication
 server.servlet.session.cookie.name=EMPLOYEE_SESSION
 
+server.servlet.session.timeout=10m
+
 
