--- a/administracion/src/main/resources/application.properties
+++ b/administracion/src/main/resources/application.properties
@@ -14,5 +14,8 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 # Configuración del servidor
 server.port=8080
 
+# Para AdministracionApplication
+server.servlet.session.cookie.name=ADMIN_SESSION
+
 # Formato de fecha en Validaciones
 spring.mvc.format.date-time=iso
