add: funcionalidad temporal de (des)bloqueo de usuarios
Relacionado con (#34) → En progreso, puedo leer los usuarios, pero no
puedo actualizar sus datos por un problema del UPDATE de SQL que
necesita la contraseña

--- a/empleados/src/main/resources/application.properties
+++ b/empleados/src/main/resources/application.properties
@@ -47,5 +47,9 @@ spring.thymeleaf.check-template-location=true
 #spring.mvc.view.prefix=
 #spring.mvc.view.suffix=
 #logging.level.org.springframework.mail=DEBUG
+server.servlet.session.timeout=10m
+
+# Para EmpleadosApplication
+server.servlet.session.cookie.name=EMPLOYEE_SESSION
 
 
