--- a/administracion/src/main/resources/application.properties
+++ b/administracion/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=admin
 
 # Configuración de JPA/Hibernate
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
@@ -16,6 +16,10 @@ server.port=8080
 
 # Para AdministracionApplication
 server.servlet.session.cookie.name=ADMIN_SESSION
+server.servlet.session.timeout=10m
 
 # Formato de fecha en Validaciones
 spring.mvc.format.date-time=iso
+
+spring.sql.init.mode=never
+
