--- a/empleados/src/main/resources/application.properties
+++ b/empleados/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=admin
 
 # Configuración de JPA/Hibernate
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
@@ -53,10 +53,7 @@ server.servlet.session.timeout=10m
 # Para EmpleadosApplication
 server.servlet.session.cookie.name=EMPLOYEE_SESSION
 
-server.servlet.session.timeout=10m
-
-server.servlet.session.timeout=10m
-
-server.servlet.session.timeout=10m
+# Never para que no se dupliquen los datos precargados
+spring.sql.init.mode=never
 
 
