HOTFIX: redirect si no hay IdUsuario + CSS
+  Añadido redireccionamiento al inicio-sesion de usuario si recargas la aplicación Intellij
e intentas guardar los datos de empleado.
+ Select añadido en registros financieros. Ahora al recordar la tarjeta,
  también recuerda su mes y año de caducudad
+ Pequeño fix en el template de registro de usuario para que los estilos
  también se apliquen al campo "email"
+ Cambio del nombre la varible en entidad para que sea igual que en el
  DTO del empleado

--- a/empleados/src/main/resources/application.properties
+++ b/empleados/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=admin
 # Configuración de JPA/Hibernate
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.open-in-view=true
@@ -55,5 +55,6 @@ server.servlet.session.cookie.name=EMPLOYEE_SESSION
 
 # Never para que no se dupliquen los datos precargados
 spring.sql.init.mode=never
+#spring.sql.init.mode=always
 
 
