--- a/administracion/src/main/resources/application.properties
+++ b/administracion/src/main/resources/application.properties
@@ -14,6 +14,8 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 # Configuración del servidor
 server.port=8080
 
+#logging.level.org.springframework.security=DEBUG
+
 # Para AdministracionApplication
 server.servlet.session.cookie.name=ADMIN_SESSION
 server.servlet.session.timeout=10m
