--- a/administracion/src/main/resources/application.properties
+++ b/administracion/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 server.port=8080
 
 #logging.level.org.springframework.security=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql=TRACE
 
 # Para AdministracionApplication
 server.servlet.session.cookie.name=ADMIN_SESSION
