--- a/administracion/src/main/resources/application.properties
+++ b/administracion/src/main/resources/application.properties
@@ -14,8 +14,9 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 # Configuración del servidor
 server.port=8080
 
-#logging.level.org.springframework.security=DEBUG
-#logging.level.org.hibernate.type.descriptor.sql=TRACE
+logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=TRACE
+logging.level.org.springframework.web.servlet.handler.AbstractHandlerMethodMapping=TRACE
+logging.level.org.springframework.web.servlet.DispatcherServlet=DEBUG
 
 # Para AdministracionApplication
 server.servlet.session.cookie.name=ADMIN_SESSION
