--- a/administracion/src/main/resources/application.properties
+++ b/administracion/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.datasource.password=admin
 # Configuración de JPA/Hibernate
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
+spring.sql.init.mode=never
+#spring.sql.init.mode=always
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
@@ -23,5 +26,5 @@ server.servlet.session.timeout=10m
 # Formato de fecha en Validaciones
 spring.mvc.format.date-time=iso
 
-spring.sql.init.mode=never
+
 
