--- a/empleados/src/main/resources/application.properties
+++ b/empleados/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=empleados
 
-# Configuración de la base de datos (ejemplo con H2)
+# Configuración del servidor
+server.port=8081
+
+# Configuración de la base de datos #
+#===================================#
 #spring.datasource.url=jdbc:mysql://localhost:3305/integradora?createDatabaseIfNotExist=true
 spring.datasource.url=jdbc:mysql://localhost:3306/integradora?createDatabaseIfNotExist=true
 spring.datasource.username=root
@@ -13,8 +17,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.open-in-view=true
-# Configuración del servidor
-server.port=8081
+
+# Never para que no se dupliquen los datos precargados
+spring.sql.init.mode=never
+#spring.sql.init.mode=always
+#
 
 # Formato de Fecha en Validaciones
 spring.mvc.format.date-time=iso
@@ -53,8 +60,6 @@ server.servlet.session.timeout=10m
 # Para EmpleadosApplication
 server.servlet.session.cookie.name=EMPLOYEE_SESSION
 
-# Never para que no se dupliquen los datos precargados
-spring.sql.init.mode=never
-#spring.sql.init.mode=always
+
 
 
