--- a/empleados/src/main/resources/application.properties
+++ b/empleados/src/main/resources/application.properties
@@ -30,6 +30,7 @@ spring.mvc.format.date-time=iso
 # file.upload-dir=./uploads/empleados
 
 # Limitar tamaño de archivos
+spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=1MB
 
