--- a/administracion/src/main/resources/application.properties
+++ b/administracion/src/main/resources/application.properties
@@ -14,6 +14,9 @@ spring.sql.init.mode=never
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
+# Zona horaria
+spring.jackson.time-zone=Europe/Madrid
+
 # Configuración del servidor
 server.port=8080
 
