add: los últimos putos cambios

--- a/Dockerfile.tomcat-combined
+++ b/Dockerfile.tomcat-combined
@@ -2,18 +2,20 @@
 FROM tomcat:latest
 
 # Argumentos para especificar las rutas a los archivos WAR relativos al contexto de construcción
-ARG EMPLEADOS_WAR_PATH
-ARG ADMINISTRACION_WAR_PATH
+# ARG EMPLEADOS_WAR_PATH
+# ARG ADMINISTRACION_WAR_PATH
 
 # Directorio webapps de Tomcat
 WORKDIR /usr/local/tomcat/webapps
 
+RUN cp -R /usr/local/tomcat/webapps.dist /usr/local/tomcat/webapps
+
 # Copia el primer archivo WAR y renómbralo para definir su ruta de contexto (ej. /empleados)
 # Asegúrate de que la ruta de origen sea relativa al contexto de construcción (la raíz del proyecto)
-COPY ${EMPLEADOS_WAR_PATH} ./empleados.war
+COPY ./empleados/build/libs/empleados.war ./empleados.war
 
 # Copia el segundo archivo WAR y renómbralo para definir su ruta de contexto (ej. /administracion)
-COPY ${ADMINISTRACION_WAR_PATH} ./administracion.war
+COPY ./administracion/build/libs/administracion.war ./administracion.war
 
 # Expone el puerto por defecto de Tomcat
 EXPOSE 8080
