--- a/empleados/src/main/resources/application.properties
+++ b/empleados/src/main/resources/application.properties
@@ -6,9 +6,9 @@ server.port=8081
 # Configuración de la base de datos #
 #===================================#
 #spring.datasource.url=jdbc:mysql://localhost:3305/integradora?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mysql://localhost:3306/integradora?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=admin
+# spring.datasource.url=jdbc:mysql://localhost:3306/integradora?createDatabaseIfNotExist=true
+# spring.datasource.username=root
+# spring.datasource.password=admin
 
 # Configuración de JPA/Hibernate
 spring.jpa.show-sql=true
