--- a/administracion/src/main/resources/application.properties
+++ b/administracion/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=administracion
 
 # Configuración de la base de datos (ejemplo con H2)
-spring.datasource.url=jdbc:mysql://localhost:3306/integradora?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=admin
+# spring.datasource.url=jdbc:mysql://localhost:3306/integradora?createDatabaseIfNotExist=true
+# spring.datasource.username=root
+# spring.datasource.password=admin
 
 # Configuración de JPA/Hibernate
 spring.jpa.show-sql=true
